# IPC-Lib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DOCUMENTATION.md  README.md  gcovr commands  ipclib-config.cmake.in
.github/workflows/: ci.yml  code coverage.yml  code-coverage-linux.yml  code-coverage-windows.yml  code-coverage.yml  linter.yml  testing-linux.yml  testing-windows.yml
IPCLib/: CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  ClientSocketAsync.cpp  ClientSocketAsync.h  DLLDefines.h  Serialization.h  ServerSocket.cpp  ServerSocket.h  ServerSocketAsync.cpp  ServerSocketAsync.h  Socket.cpp  Socket.h  SocketAsync.cpp  SocketAsync.h  ipclib_export.h  ipclib_linux.cpp  ipclib_portability.h  ipclib_windows.cpp
IPCTests/: Actions.h  AsyncSocketTest.cpp  CMakeLists.txt  ClientWorkerThread.cpp  ClientWorkerThread.h  DualSocketTests.cpp  ServerWorkerThread.cpp  ServerWorkerThread.h  SocketTest.cpp  TestSerializer.h  Utils.h  WorkerThread.cpp  WorkerThread.h
